--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,40 @@
-<p>index</p>
+<div class="container pt-5">
+
+    <div class="row">
+        <div class="col-md-9 bg-dark" >
+            <form method="post" action="/search" class="input-group mb-3 mt-3">
+                <input type="text" name="searchField" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input type="submit" class="btn btn-outline-secondary input-group-append" value="Search">
+            </form>
+        </div>
+    </div>
+    <div class="raw content d-flex flex-row">
+        <div class="col-md-4 bg-dark">
+            <div class="side-menu">
+                <ul class="list-group">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="rev_slider">
+                <div class="slide slider__main">
+                    <img src="img/leo.jpg" alt="">
+                </div>
+                <div class="slide slider__main">
+                    <img src="img/leo.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="img/leo.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <p>texte1</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
