--- a/views/basket.hbs
+++ b/views/basket.hbs
@@ -1,13 +1,14 @@
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-12">
-            {{#each orders}}
-                <p>{{item.name}}</p>
-                <p>{{count}}</p>
-                <form action="/buy" method="post">
-                    <input type="submit" class="btn btn-success" value="Buy">
-                </form>
-            {{/each}}
+        <div class="col-md-12 d-flex flex-row">
+            <ul>
+                {{#each orders}}
+                    <li class="d-flex flex-row justify-content-between">
+                        <p>{{name}}</p>
+                        <img style="width: 10vh" src={{image}} alt="">
+                    </li>
+                {{/each}}
+            </ul>
         </div>
     </div>
 </div>
