--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,11 +12,11 @@
         <div class="col-md-4 bg-dark">
             <div class="side-menu">
                 <ul class="list-group">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
+                    <a href="/items"><li class="list-group-item">Phones</li></a>
+                    <a href="/items"><li class="list-group-item">Notebooks</li></a>
+                    <a href="/items"><li class="list-group-item">Computers</li></a>
+                    <a href="/items"><li class="list-group-item">MP3 Players</li></a>
+                    <a href="/items"><li class="list-group-item">CPUs</li></a>
                 </ul>
             </div>
         </div>
