--- a/views/items.hbs
+++ b/views/items.hbs
@@ -1,6 +1,19 @@
 <div class="container pt-5">
     <div class="raw">
         <div class="col-md-12">
+            {{cat}}
+            <form method="get" action="/items">
+                <select class="form-select" aria-label="Default select example" name="optVal">
+                    <option selected>All items</option>
+                    <option value="phone">Phones</option>
+                    <option value="notebook">Notebooks</option>
+                    <option value="pc">Computers</option>
+                    <option value="mp3">MP3</option>
+                    <option value="cpu">CPUs</option>
+                </select>
+                <input type="submit">
+            </form>
+
             <ul class="d-flex flex-wrap flex-row bg-light" style="list-style-type: none">
                 {{#each items}}
                     <li class="item">
