--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,11 +12,11 @@
         <div class="col-md-4 bg-dark">
             <div class="side-menu">
                 <ul class="list-group">
-                    <a href="/items"><li class="list-group-item">Phones</li></a>
-                    <a href="/items"><li class="list-group-item">Notebooks</li></a>
-                    <a href="/items"><li class="list-group-item">Computers</li></a>
-                    <a href="/items"><li class="list-group-item">MP3 Players</li></a>
-                    <a href="/items"><li class="list-group-item">CPUs</li></a>
+                    <a href="/items?optVal=phone"><li class="list-group-item">Phones</li></a>
+                    <a href="/items?optVal=notebook"><li class="list-group-item">Notebooks</li></a>
+                    <a href="/items?optVal=pc"><li class="list-group-item">Computers</li></a>
+                    <a href="/items?optVal=mp3"><li class="list-group-item">MP3 Players</li></a>
+                    <a href="/items?optVal=cpu"><li class="list-group-item">CPUs</li></a>
                 </ul>
             </div>
         </div>
