--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-md-9 bg-dark" >
-            <form method="post" action="/search" class="input-group mb-3 mt-3">
+            <form method="get" action="/search" class="input-group mb-3 mt-3">
                 <input type="text" name="searchField" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <input type="submit" class="btn btn-outline-secondary input-group-append" value="Search">
             </form>
