--- a/views/basket.hbs
+++ b/views/basket.hbs
@@ -8,6 +8,7 @@
                 <li class="d-flex flex-row justify-content-between p-2">
                     <div>
                         <p>{{name}}</p>
+                        <p>{{count}}</p>
                         <form action="/basket" method="post">
                             <input type="hidden" name="orderToDelete" value={{id}}>
                             <input type="submit" class="btn btn-danger" value="Delete">
