--- a/views/basket.hbs
+++ b/views/basket.hbs
@@ -9,9 +9,9 @@
                     <div>
                         <p>{{name}}</p>
                         <p>{{count}}</p>
-                        <form action="/basket" method="post">
-                            <input type="hidden" name="orderToDelete" value={{id}}>
-                            <input type="submit" class="btn btn-danger" value="Delete">
+                        <form action="/basket/{{id}}" method="post">
+                            <input type="hidden" value="{{id}}">
+                            <input type="submit" value="Delete">
                         </form>
                     </div>
                     <img style="height: 30vh; width: auto" src={{image}} alt="">
