--- a/views/basket.hbs
+++ b/views/basket.hbs
@@ -23,10 +23,20 @@
         <hr>
     {{/each}}
 </ul>
-    <form action="/buy" class="text-center">
-        <input type="submit" value="Купить" class="btn btn-success m-3 p-3">
-    </form>
+
     {{else}}
         <p>no items yet ordered</p>
+    {{/if}}
+    {{#if loggedIn}}
+        <form action="/buy" method="post" class="text-center">
+            <input type="submit" value="Оформить заказ" class="btn btn-success m-3 p-3">
+        </form>
+        <form action="/logout" method="post" class="text-center">
+            <input type="submit" value="Log out" class="btn btn-danger m-3 p-3">
+        </form>
+    {{else}}
+        <form action="/login" method="get" class="text-center">
+            <input type="submit" value="Log in" class="btn btn-success m-3 p-3">
+        </form>
     {{/if}}
 </div>
